ColourManager no-longer uses public variables and general code style cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,44 @@
 *.exe
 *.out
 *.app
+
+#### CUSTOM ####
+autom4te.cache
+
+makefile
+Makefile.in
+
+aclocal.m4
+
+compile
+
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+
+depcomp
+libtool
+missing
+
+install-sh
+ltmain.sh
+
+stamp-h1
+
+*.o
+src/*.o
+
+Makefile
+shaders/Makefile
+src/CubeAsset.o
+src/GameAssetManager.o
+src/GameWorld.o
+src/main.o
+src/shaderexample
+src/Makefile.in
+
+src/.deps/*
