Attempt python bindings, but pyconfig.h missing?

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
 EXTRA_DIST = ColourManager.h GameWorld.h GameAssetManager.h GameAsset.h CubeAsset.h DiamondAsset.h PyBind.h BoundingBox.h
+PYTHON_INCLUDE = /usr/include/python2.7
 
 bin_PROGRAMS = shaderexample
 shaderexample_SOURCES = main.cc
@@ -11,4 +12,4 @@ libengine_la_LDFLAGS = -version-info 0:1
 AM_CPPFLAGS = -DGL_GLEXT_PROTOTYPES -DGL3_PROTOTYPES
 AM_CPPFLAGS += -std=c++11
 AM_CPPFLAGS += $(gl_CFLAGS) $(glew_CFLAGS) $(sdl2_CFLAGS) $(BOOST_CPPFLAGS)
-LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_PYTHON_LIBS)
+LIBS += $(gl_LIBS) $(glew_LIBS) $(sdl2_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
