update travis to try and fix osx build

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,23 @@ before_install:
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y gcc-4.8 g++-4.8 libsdl-* libglm-dev libglew-dev libboost-all-dev libsdl2-dev ; fi
 - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90 ; fi
 
-
-
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then  brew update ; fi
-
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then  brew install sdl glm glew sdl2 ; fi
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then  brew install homebrew/x11/gle ; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install sdl; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install sdl2; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install glew; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install glm; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install homebrew/x11/mesalib-glw; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install glfw2; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install glfw3; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install python; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew unlink boost; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install boost --with-python; fi
+ - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install boost-python --with-python; fi
 
 
 
 script:
+- chmod 755 configure
 - autoreconf -i
 - ./configure
 - make
