--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: cpp
 compiler:
-- gcc
-- clang
-- g++
+ - gcc
+ - g++
+
 before_install:
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-add-repository ppa:zoogie/sdl2-snapshots -y; fi
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y gcc-4.8 g++-4.8 libsdl-* libglm-dev libglew-dev libboost-all-dev libsdl2-dev ; fi
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90 ; fi
+ - if [ "$TRAVIS_OS_NAME" == "linux" ]; then echo "yes" |sudo apt-add-repository ppa:zoogie/sdl2-snapshots; fi
+ - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+ - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
+ - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y gcc-4.8 g++-4.8 libsdl-* libglm-dev libglew-dev libsdl2-dev python python-dev libboost-all-dev libboost-python-dev libboost-python1.48.0; fi
+ - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90; fi
 
  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install sdl; fi
@@ -24,21 +24,15 @@ before_install:
  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install boost-python --with-python; fi
 
 
-
 script:
-- chmod 755 configure
-- autoreconf -i
-- ./configure
-- make
-
-branches:
-only:
-- master
+ - chmod 755 configure
+ - autoreconf -i
+ - ./configure
+ - make
 
 os:
-- linux
-- osx
-
+ - linux
+ - osx
 
 matrix:
   allow_failures:
