add clang back to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler:
  - gcc
  - g++
+ - clang
 
 before_install:
  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then echo "yes" |sudo apt-add-repository ppa:zoogie/sdl2-snapshots; fi
