--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,4 @@
+
 AC_INIT([ShaderExamples], [0.1])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([foreign subdir-objects])
@@ -11,11 +12,10 @@ AC_LANG(C++)
 BOOST_REQUIRE
 BOOST_PROGRAM_OPTIONS
 
-
 AC_CHECK_HEADER([glm/glm.hpp], , AC_MSG_ERROR(GLM headers are required. Please see INSTALL))
 
 # Find the following libraries on the system
-PKG_CHECK_MODULES([gl], [gl])
+#PKG_CHECK_MODULES([gl], [gl])
 PKG_CHECK_MODULES([glew], [glew])
 PKG_CHECK_MODULES([sdl2], [sdl2])
 
